# open_karto

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  README.org  setup.py  setup.py.old  test.py
include/open_karto/: SpaSolver.h
src/: PythonInterface.cpp  SpaSolver.cpp
